# nextgen-computer-academy

./: DEPLOYMENT_VERCEL.md  design_guidelines.json  pyproject.toml  requirements.txt  vercel.json
.emergent/: emergent.yml
.emergent/cron/: webhook-crons
backend/: requirements.txt  server.py
backend/tests/: backend_test.py
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AdmissionForm.jsx  ChatWidget.jsx  Courses.jsx  DemoBooking.jsx  FloatingWidgets.jsx  Footer.jsx  Gallery.jsx  Hero.jsx  Navbar.jsx  SEO.jsx  Sections.jsx  SuccessJourney.jsx  Testimonials.jsx  Trainer.jsx
frontend/src/context/: AppContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AdminDashboard.jsx  AdminLogin.jsx  CourseDetail.jsx  HomePage.jsx
memory/: PRD.md
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
