[project]
name = "nextgen-computer-academy"
version = "1.0.0"
description = "NextGen Computer Academy — FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.25.0",
    "python-dotenv>=1.0.1",
    "pymongo==4.6.3",
    "motor==3.3.1",
    "pydantic>=2.6.4",
    "email-validator>=2.2.0",
    "pyjwt>=2.10.1",
    "bcrypt==4.1.3",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "resend>=2.0.0",
    "openpyxl>=3.1.5",
    "emergentintegrations==0.2.0",
]

# ------------------------------------------------------------------------
# uv configuration
# emergentintegrations is hosted on Emergent's private PyPI mirror. uv reads
# UV_EXTRA_INDEX_URL from the environment. In Vercel, add this env var:
#   UV_EXTRA_INDEX_URL=https://d33sy5i8bnduwe.cloudfront.net/simple/
# Also add PIP_EXTRA_INDEX_URL with the same value for the pip fallback path.
# ------------------------------------------------------------------------
[tool.uv]
index-strategy = "unsafe-best-match"
